# course_work

./: README.md  main.py  pyproject.toml
src/: classes.py  utils.py
src/data/: operations.json
tests/: conftest.py  test_classes.py  test_utils.py
