[tool.poetry]
name = "course-project"
version = "0.1.0"
description = ""
authors = ["NMNarek <narek8222@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
